--- a/app/src/resources/views/user/register.hbs
+++ b/app/src/resources/views/user/register.hbs
@@ -19,7 +19,7 @@
 
             <label for="other">Khác</label>
             <input type="radio" class="input-gender" id="other" name="gender" value="other"> --}}
-            <select name="sex">
+            <select class="input-gender" name="sex">
                 <option value="Nam">Nam</option>
                 <option value="Nữ">Nữ</option>
                 <option value="Khác">Khác</option>
